--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Restoran - Bootstrap Restaurant Template</title>
+    <title>La Factoria - Portland Premier Restaurant</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -47,7 +47,7 @@
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Restoran</h1>
+                    <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>La Factoria - Portland Premier Restaurant</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -111,9 +111,16 @@
                     </div>
                     <div class="col-lg-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal">About Us</h5>
-                        <h1 class="mb-4">Welcome to <i class="fa fa-utensils text-primary me-2"></i>Restoran</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <h1 class="mb-4">Welcome to <i class="fa fa-utensils text-primary me-2"></i>La Factoria</h1>
+                        <p class="mb-4">Welcome to our vibrant corner of Latin America—where every dish tells a story, every spice sings, and every guest is family.
+                                        We are thrilled to have you with us! Whether you're here for the bold flavors of Mexico, the soulful rhythms of Cuba, or the festive spirit of Puerto Rico, we promise a culinary journey that celebrates tradition, passion, and joy.
+                                        So sit back, sip something delicious, and let the aromas, colors, and music transport you. ¡Buen provecho!
+                        </p>
+                        <p class="mb-4">La Factoria is dedicated to delivering an authentic Latin culinary experience in a vibrant, 
+                            welcoming atmosphere. With a focus on flavorful cuisine, lively music, and warm hospitality, the 
+                            restaurant aims to become a cultural hub, where guests can enjoy the richness of culinary Latin 
+                            traditions.
+                            </p>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
@@ -226,9 +233,9 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>22 NE 2nd Ave<br>Portland, OR 97201/p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>(503) 747-8401</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>jorgepadillapdx@gmail.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -238,10 +245,13 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
-                        <h5 class="text-light fw-normal">Monday - Saturday</h5>
-                        <p>09AM - 09PM</p>
-                        <h5 class="text-light fw-normal">Sunday</h5>
-                        <p>10AM - 08PM</p>
+                        <h5 class="text-light fw-normal">Business Hours</h5>
+                        <p><p>Monday - Thursday: 8AM -3PM<br>
+                                Monday - Thursday: - 4PM-12AM<br>
+                                Friday - Saturday: 8AM- 2AM<br>
+                                Sunday: 9AM - 10PM</p></p>
+                        <h5 class="text-light fw-normal">Holidays</h5>
+                        <p>TBD</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Newsletter</h4>
